fix some alignments

--- a/src/app/components/document-container/document-container.component.scss
+++ b/src/app/components/document-container/document-container.component.scss
@@ -74,7 +74,7 @@ $body-color: #000000;
 .Sinput{
     max-width: 400px;
     border-radius: 0%;
-    margin-right: 2vw;
+    margin-right: 10px;
  }
 .btn-primary{
     background-color: #165C7D;
@@ -89,24 +89,7 @@ $body-color: #000000;
   height: 85vh;
   display: flex;
   flex-direction: column;
- // justify-content: space-between;
 }
-.Buttondiv{
-  margin-left: 20px;
-  display: flex;
-  flex-direction: row;
-  padding-top: 15px;
-
-}
-.rightbtn{
-  margin-right: 5vw;
-}
-.leftbtn{
-  color: #165C7D;
-  border-color: #165C7D;
-  border-radius: 0%;
-}
-
 
 @media screen and (max-width: 990px),
        screen and (max-height: 750px) {
